--- a/main.html
+++ b/main.html
@@ -4,11 +4,32 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1 style="text-align: center">My Playlist</h1>
+	<div class="section">
+	<ul style="list-style-type: none">
+		 <li><a href="" target="_blank">Song 1</a></li>
+		 <li><a href="" target="_blank">Song 2</a></li>
+	     <li><a href="" target="_blank">Song 3</a></li>
+		 <li><a href="" target="_blank">Song 4</a></li>
+	     <li><a href="" target="_blank">Song 5</a></li>
+	</ul></div>
+	<h2 style="text-align: center">Now Playing...</h2>
+	<div class="section">
+	<video class="player_one" controls >
+		<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+	</video>
+	<h2 style="text-align: center">MP3 songs</h2>
+	<a target="_blank" style="text-decoration-line: none">Maan Meri Jaan</a><br>
+	<audio class="player_two" controls>
+		<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
+	</audio>   
+		</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
